--- a/HeartRateCollection/Base.lproj/Interface.storyboard
+++ b/HeartRateCollection/Base.lproj/Interface.storyboard
@@ -22,7 +22,10 @@
                         <button width="1" alignment="left" verticalAlignment="bottom" title="Start Recording" id="kJi-Ux-Jp7">
                             <color key="titleColor" red="0.54414624040000004" green="1" blue="0.5117802011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <fontDescription key="font" type="system" weight="semibold" pointSize="15"/>
+                            <fontDescription key="font" type="system" pointSize="15"/>
+                            <connections>
+                                <action selector="buttonHandler" destination="AgC-eL-Hgc" id="Eqw-Pl-IOF"/>
+                            </connections>
                         </button>
                     </items>
                     <connections>
@@ -32,6 +35,22 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--Done-->
+        <scene sceneID="T5d-nO-akO">
+            <objects>
+                <controller identifier="Done" id="uue-EM-EIL" customClass="DoneInterfaceController" customModule="HeartRateCollection_Extension">
+                    <items>
+                        <label width="1" height="0.29999999999999999" alignment="left" verticalAlignment="bottom" text="Thank you!" textAlignment="center" numberOfLines="3" id="cJ8-EH-YQk">
+                            <fontDescription key="font" type="boldSystem" pointSize="16"/>
+                        </label>
+                        <imageView width="0.5" height="0.45000000000000001" alignment="center" verticalAlignment="center" image="checkmark" id="OWY-rN-dGU">
+                            <color key="tintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </imageView>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="468" y="345"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
