Simplify for opening issue

--- a/AppleWatchHeartRateCollection/Base.lproj/Main.storyboard
+++ b/AppleWatchHeartRateCollection/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="til-ZS-mny">
-                                <rect key="frame" x="91" y="502" width="192" height="36"/>
+                                <rect key="frame" x="30" y="502" width="192" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <state key="normal" title="Withdraw from study">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -99,8 +99,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="til-ZS-mny" firstAttribute="leading" secondItem="5uN-PM-hQC" secondAttribute="leading" constant="30" id="39f-M3-blc"/>
                             <constraint firstItem="5uN-PM-hQC" firstAttribute="bottom" secondItem="til-ZS-mny" secondAttribute="bottom" constant="80" id="ANZ-AU-3yG"/>
-                            <constraint firstItem="til-ZS-mny" firstAttribute="centerX" secondItem="wbo-Tv-vjr" secondAttribute="centerX" id="K9W-UP-psW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5uN-PM-hQC"/>
                     </view>
